Add Umami analytics tracking to homepage and manifesto page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Jerald Ryan Roberto</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="icon" type="image/png" sizes="32x32" href="images/Tux-Coat-Of-Arms_32x32.png">
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="1aa95797-d76f-424f-b371-d3f74f76e2d2"></script>
 </head>
 <body>
     <div class="container">
